--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
   "tasks": [
     {
       "type": "npm",
-      "script": "start",
+      "script": "electron",
       "isBackground": true,
       "problemMatcher": {
         "owner": "typescript",
@@ -22,7 +22,7 @@
     },
     {
       "type": "npm",
-      "script": "test",
+      "script": "electron test",
       "isBackground": true,
       "problemMatcher": {
         "owner": "typescript",
