--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,8 +1,8 @@
 {
-  // For more information, visit: https://go.microsoft.com/fwlink/?LinkId=733558
   "version": "2.0.0",
   "tasks": [
     {
+      "label": "Electron",
       "type": "npm",
       "script": "electron",
       "isBackground": true,
@@ -15,14 +15,22 @@
             "regexp": "(.*?)"
           },
           "endsPattern": {
-            "regexp": "bundle generation complete"
+            "regexp": "electron ."
           }
         }
-      }
+      },
+      "group": {
+        "kind": "build",
+        "isDefault": true
+      },
+      "dependsOn": [
+        "Start"
+      ]
     },
     {
+      "label": "Start",
       "type": "npm",
-      "script": "electron test",
+      "script": "start",
       "isBackground": true,
       "problemMatcher": {
         "owner": "typescript",
@@ -36,7 +44,8 @@
             "regexp": "bundle generation complete"
           }
         }
-      }
-    }
+      },
+      "group": "build",
+    },
   ]
 }
