Preparando para começar o projeto

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,8 @@
       "name": "Converge Dev",
       "type": "node",
       "request": "launch",
-      "preLaunchTask": "Electron"
+      "preLaunchTask": "Electron",
+      "postDebugTask": "Terminate All Tasks"
     },
   ]
 }
