--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -47,5 +47,19 @@
       },
       "group": "build",
     },
+    {
+      "label": "Terminate All Tasks",
+      "command": "echo ${input:terminate}",
+      "type": "shell",
+      "problemMatcher": []
+    }
+  ],
+  "inputs": [
+    {
+      "id": "terminate",
+      "type": "command",
+      "command": "workbench.action.tasks.terminate",
+      "args": "terminateAll"
+    }
   ]
 }
