--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "bootstrap": "^5.2.3",
     "electron": "^24.2.0",
     "electron-reload": "^2.0.0-alpha.1",
     "rxjs": "~7.8.0",
